# gen-mcp

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY_AUDIT.md
docs/: architecture.md  configuration.md  deployment.md
examples/: README.md  config.toml  docker_config.toml  docker_config_examples.md  echo_config.toml  just_config.toml  just_with_auth.toml  unixtools_config.toml  vscode_mcp_config.json  vscode_mcp_config_examples.md  websocket_auth_config.toml
src/: config.rs  config_schema.rs  executor.rs  main.rs  server.rs  transport.rs
tests/: example_configs_parse.rs  stdio_end_to_end.rs
