[package]
name = "genmcp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.7", features = ["ws"] }
axum-extra = "0.12.2"
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
jsonwebtoken = "10.2.0"
jwtk = "0.4"
nix = { version = "0.30.1", features = ["process", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
rust-mcp-schema = "0.9.1"
rust-mcp-sdk = "0.7.4"
rust-mcp-transport = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8.22", features = ["derive"] }
tempfile = "3.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-test = "0.4"
toml = "0.9.8"
tower-http = "0.6.8"
url = "2.5"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
